# serac_build_example

./: .gitignore  CMakeLists.txt  main.cu  readme.jg
axom/: CMakeLists.txt
axom/core_project/: CMakeLists.txt  core.hpp
axom/cpp_cuda_project/: CMakeLists.txt
axom/cpp_only_project/: CMakeLists.txt
readmes/: readme.cuda  readme.hip_CC  readme.hipcc
